--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="uft-8">
-    <meta name="viewport" conent="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <script src="js/scripts.js"></script>
-  </body>
 </html>
