--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="uft-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <ul class="pokemon-list"></ul>
+    <script src="js/promis-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
