--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <h5 class="modal-title" id="pokemonModalLabel">Pokemon Index</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+          <div class="modal-header">
+            <h5 class="modal-title" id="pokemonModalLabel">Pokemon Index</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
         </div>
         <div class="modal-body">The body of the modal</div>
       </div>
