--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="pokemonModalLabel">Pokemon Index</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close btn btn-secondary" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <ul class="pokemon-list"></ul>
+    <ul class="pokemon-list list-group"></ul>
     <div>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
